--- a/views/index.twig
+++ b/views/index.twig
@@ -21,7 +21,7 @@
         <img id="profile-picture" src="https://ui-avatars.com/api/?name=John+Doe&size=255" alt="">
       </div>
       <div class="col">
-        <h1><?php echo $name.' '.$lastName; ?></h1>
+        <h1>{{ name }}</h1>
         <h2>PHP Developer</h2>
         <ul>
           <li>Mail: hector@mail.com</li>
@@ -45,24 +45,13 @@
         <div>
           <h3 class="border-bottom-gray" >Work Experience</h3>
           <ul>
-            <?php
-              $totalMonths=0;
-            $jobsNumber=count($jobs);
+            {% for job in jobs %}
+              <li class="work-position">
+                <h5>{{ job.title }}</h5>
+                <p>{{ job.description }}</p>
+            </li>
+            {% endfor %}
 
-              for($idx=0;$idx < $jobsNumber;$idx++){
-
-                $totalMonths += $jobs[$idx]->months;
-
-                if($totalMonths > $limitMonths){
-                  break;
-                }
-
-                if(!$jobs[$idx]->visible){
-                  continue;
-                }
-                  printElement($jobs[$idx]);
-
-                } ?>
 
           </ul>
         </div>
