Extendiendo Templates con Twig
Extender templates nos permitirá hacer sitios más dinámicos reutilizando código HTML.

Denotaremos con la palabra reservada extends el código que queremos reutilizar y con la palabra block el código que deseamos sea dinámico, este último debe tener una palabra clave que le sirva de identificador para el código que se estará reemplazando.

--- a/views/addJob.twig
+++ b/views/addJob.twig
@@ -1,19 +1,12 @@
-<html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Add Job</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
-      crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>Add Job</h1>
-<form class="" action="/platzi/cursoPhp72/jobs/add" method="post">
+{% extends 'layout.twig' %}
+
+{% block content  %}
+<h1>Add Job</h1>
+  <form class="" action="/platzi/cursoPhp72/jobs/add" method="post">
   <label for="">Title:</label>
   <input type="text" name="title" value=""><br/>
   <label for="">Description:</label>
   <input type="text" name="description" value=""><br/>
   <button type="submit">Save</button>
-</form>
-  </body>
-</html>
+  </form>
+{% endblock %}
