--- a/views/addJob.twig
+++ b/views/addJob.twig
@@ -2,6 +2,9 @@
 
 {% block content  %}
 <h1>Add Job</h1>
+<div class="alert alert-primary" role="alert">
+  {{ responseMessage }}
+</div>
   <form class="" action="/platzi/cursoPhp72/jobs/add" method="post">
   <label for="">Title:</label>
   <input type="text" name="title" value=""><br/>
